# GlintSDL3

./: CMakeLists.txt
src/: main.g  sdl.g
